--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -34,6 +35,10 @@ android {
     buildFeatures{
         dataBinding true
     }
+    androidExtensions {
+        experimental = true
+    }
+
 }
 
 dependencies {
