set to portrait

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EsperApp">
-        <activity android:name=".activities.PhoneDetailActivity"></activity>
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.PhoneDetailActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".activities.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
